resume page, basics

--- a/index.html
+++ b/index.html
@@ -213,13 +213,37 @@
                           </div>
                           <!-- / Experience 3 -->
 
-                          <!-- Experience 3 -->
+                          <!-- Experience 4 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Desenvolvedor Fullstack</h4>
                             <span class="item-period">Jun 2021 - Dez 2021</span>
                             <span class="item-small">BeCapital Holding</span>
                           </div>
-                          <!-- / Experience 3 -->
+                          <!-- / Experience 4 -->
+
+                          <!-- Experience 4 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Android developer</h4>
+                            <span class="item-period">Jun 2020 - Ago 2020</span>
+                            <span class="item-small">Target Bank</span>
+                          </div>
+                          <!-- / Experience 4 -->
+
+                          <!-- Experience 5 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Desenvolvedor Frontend</h4>
+                            <span class="item-period">Mai 2019 - Jun 2020</span>
+                            <span class="item-small">Roquette Pinto Comunicação Educativa</span>
+                          </div>
+                          <!-- / Experience 5 -->
+
+                          <!-- Experience 6 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Analista de infraestrutura e suporte</h4>
+                            <span class="item-period">Out 2014 - Mai 2020</span>
+                            <span class="item-small">Roquette Pinto Comunicação Educativa</span>
+                          </div>
+                          <!-- / Experience 6 -->
                         </div>
                       </div>
                     </div>
@@ -229,24 +253,19 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Design <span>Skills</span></h3>
+                          <h3>Leadership <span>Skills</span></h3>
                         </div>
 
                         <div class="skills-info">
-                          <h4>Web Design</h4>                               
+                          <h4>Tech Leadership</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-1"></div>
                           </div>
 
-                          <h4>Graphic Design</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-2"></div>
-                          </div>
-
-                          <h4>Print Design</h4>
+                          <h4>Problem Solution</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-3"></div>
-                          </div> 
+                          </div>
                         </div>
 
                       </div>
@@ -259,19 +278,24 @@
                         </div>
 
                         <div class="skills-info">
-                          <h4>HTML5</h4>                               
+                          <h4>React</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-4"></div>
                           </div>
 
-                          <h4>CSS3/LESS/SASS</h4>
+                          <h4>React Native</h4>                               
                           <div class="skill-container">
-                            <div class="skill-percentage skill-5"></div>
+                            <div class="skill-percentage skill-7"></div>
                           </div>
 
-                          <h4>jQuery</h4>
+                          <h4>Python</h4>
                           <div class="skill-container">
-                            <div class="skill-percentage skill-6"></div>
+                            <div class="skill-percentage skill-9"></div>
+                          </div>
+
+                          <h4>NodeJs</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-9"></div>
                           </div> 
                         </div>
                         
@@ -284,7 +308,7 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
-                          <a href="#" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                          <a href="cv/LucasRocha-EN.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
                         </div>
                       </div>
                     </div>
