--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <div class="photo">
-                        <img src="images/rubik.png" alt="Geek University">
+                        <img src="images/me_ia.jpeg" alt="Geek University">
                       </div>
                     </div>
 
@@ -325,7 +325,7 @@
             <section class="pt-page" data-id="services">
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
-                  <h2>Serviços Prestados</h2>
+                  <h2>O que eu faço</h2>
                 </div>
                 <div class="page-content">
                   <!-- My Services -->
@@ -341,10 +341,10 @@
                         <div class="service-info">
                           <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                           <div class="service-image">
-                            <img src="images/service/python.png" alt="Responsive Design" class="mCS_img_loaded">
+                            <img src="images/service/web_design_icon.png" alt="Responsive Design" class="mCS_img_loaded">
                           </div>
-                          <h4>Programação Python</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <h4>Desenvolvimento Web</h4>
+                          <p>Desenvolvimento web com react utilizando melhores práticas de mercado</p>
                         </div>
                       </div>
                     </div>
@@ -353,10 +353,10 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/photography_icon.png" alt="Photography" class="mCS_img_loaded">
+                            <img src="images/service/mobile.png" alt="Photography" class="mCS_img_loaded">
                           </div>
-                          <h4>Photography</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <h4>Desenvolvimento mobile</h4>
+                          <p>Desenvolvimento de apps usando react-native para plataformas IOs e Android</p>
                         </div>
                       </div>
                     </div>
@@ -367,8 +367,8 @@
                           <div class="service-image">
                             <img src="images/service/creativity_icon.png" alt="Creativity" class="mCS_img_loaded">
                           </div>
-                          <h4>Management</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <h4>Liderança Técnica</h4>
+                          <p>Tomada de decisões, gestão estratégica de times técnicos e entendimento de regras de negócio</p>
                         </div>
                       </div>
                     </div>
@@ -377,17 +377,17 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/advetising_icon.png" alt="Advetising" class="mCS_img_loaded">
+                            <img src="images/service/web_design_icon.png" alt="Advetising" class="mCS_img_loaded">
                           </div>
-                          <h4>Advertising</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <h4>Desenvolvimento backend</h4>
+                          <p>Desenvolvimento de backend utilizando python ou nodejs</p>
                         </div>
                       </div>
                     </div>
                   </div>
                   <!-- End of My Services -->
 
-                  <!-- Clients -->
+                  <!-- Clients
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
@@ -432,7 +432,7 @@
 
                     </div>
                   </div>
-                  <!-- End of Clients -->
+                  End of Clients -->
 
                   <!-- Testimonials -->
                   <div class="row">
@@ -449,20 +449,20 @@
                           <div class="testimonial-credits">
                             <!-- Picture -->
                             <div class="testimonial-picture">
-                              <img src="images/testimonials/testimonial_photo_1.jpg" alt="">
+                              <img src="images/photo.png" alt="">
                             </div>              
                             <!-- /Picture -->
                             <!-- Testimonial author information -->
                             <div class="testimonial-author-info">
-                              <p class="testimonial-author">Maria Richardson</p>
-                              <p class="testimonial-firm">Lindsley's Lumber</p>
+                              <p class="testimonial-author">Marcelo Araújo</p>
+                              <p class="testimonial-firm">Porto</p>
                             </div>
                           </div>
                           <!-- /Testimonial author information -->
                           <!-- Testimonial Content -->
                           <div class="testimonial-content">
                             <div class="testimonial-text">
-                              <p>"Phasellus eu nunc tincidunt, ultricies elit vitae, pretium eros. Sed sed ipsum sed massa."</p>
+                              <p>"Trabalhei com Lucas na squad Bens da Porto, supervisionava minhas entregas e liderava o time de front. É um baita profissional dedicado, resiliente e transparente, responsável em tomar decisões e buscando sempre ajudar com que podia para minha evolução profissional dentro das demandas do trabalho como desenvolvedor, foi uma honra e um grande aprendizado."</p>
                             </div>
                           </div>            
                           <!-- /Testimonial Content -->                
@@ -475,20 +475,21 @@
                           <div class="testimonial-credits">
                             <!-- Picture -->
                             <div class="testimonial-picture">
-                              <img src="images/testimonials/testimonial_photo_2.jpg" alt="">
+                              <img src="images/female.jpeg" alt="">
                             </div>              
                             <!-- /Picture -->
                             <!-- Testimonial author information -->
                             <div class="testimonial-author-info">
-                              <p class="testimonial-author">John Doe</p>
-                              <p class="testimonial-firm">Apple Inc.</p>
+                              <p class="testimonial-author">Jéssica Dias</p>
+                              <p class="testimonial-firm">BeCapital Holding</p>
                             </div>
                           </div>
                           <!-- /Testimonial author information -->
                           <!-- Testimonial Content -->
                           <div class="testimonial-content">
                             <div class="testimonial-text">
-                              <p>"Vivamus porta dapibus tristique. Suspendisse et arcu eget nisi convallis eleifend nec ac lorem.</p>
+                              <p>"Fui dirigida pelo Lucas na BeCapital na área de TI. Ele foi super prestativo em me apresentar à novas tecnologias, como incentivou e orientou meus estudos em DevOps. Tem grande conhecimento em metodologias ágeis assim como nas áreas de infraestrutura e desenvolvimento. É um ótimo desenvolvedor front-end mas muito habilidoso com back. Além disso, foi um excelente gestor, sempre visando o bem estar de sua equipe e da empresa.
+                                Recomendo o Lucas como um gestor competente, muito inteligente, proativo e que está sempre com a cabeça aberta a novas ideias.</p>
                             </div>
                           </div>            
                           <!-- /Testimonial Content -->                
@@ -501,20 +502,20 @@
                           <div class="testimonial-credits">
                             <!-- Picture -->
                             <div class="testimonial-picture">
-                              <img src="images/testimonials/testimonial_photo_3.jpg" alt="">
+                              <img src="images/photo.png" alt="">
                             </div>              
                             <!-- /Picture -->
                             <!-- Testimonial author information -->
                             <div class="testimonial-author-info">
-                              <p class="testimonial-author">George McQueen</p>
-                              <p class="testimonial-firm">Harmony House</p>
+                              <p class="testimonial-author">Andrei Deholte</p>
+                              <p class="testimonial-firm">Roquette Pinto Comunicação Educativa</p>
                             </div>
                           </div>
                           <!-- /Testimonial author information -->
                           <!-- Testimonial Content -->
                           <div class="testimonial-content">
                             <div class="testimonial-text">
-                              <p>"Aliquam congue auctor lectus sed fermentum. Nulla ultricies tellus quis sapien lacinia egestas."</p>
+                              <p>"O Lucas, como desenvolvedor, possui uma visão aguçada em seu trabalho, colocando não só sua visão de maneira ímpar na equipe mas criando um ambiente agradável de se estar."</p>
                             </div>
                           </div>            
                           <!-- /Testimonial Content -->                
@@ -733,7 +734,7 @@
       <!-- /Main Content -->
     </div>
     <footer>
-      <div class="copyrights">&copy; Geek University</div>
+      <div class="copyrights">&copy; Lucas Rocha</div>
     </footer>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/pages-switcher.js"></script>
