--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta name="description" content="Site portfólio Lucas Rocha" />
     <meta
       name="keywords"
-      content="curriculo, vitae, geek, university, git, github"
+      content="curriculo, lucas, rocha, git, github, developer"
     />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="code.ico" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
@@ -98,7 +98,7 @@
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <div class="photo">
-                        <img src="images/me_ia.jpeg" alt="Geek University" />
+                        <img src="images/me_ia.jpeg" alt="Me" />
                       </div>
                     </div>
 
