adding design skills

--- a/index.html
+++ b/index.html
@@ -351,6 +351,30 @@
                           </div>
                         </div>
                       </div>
+
+                      <div class="">
+                        <div class="block">
+                          <div class="block-title">
+                            <h3>Design <span>Skills</span></h3>
+                          </div>
+  
+                          <div class="skills-info">
+                            <h4>Photoshop</h4>
+                            <div class="skill-container">
+                              <div class="skill-percentage skill-9"></div>
+                            </div>
+  
+                            <h4>Illustrator</h4>
+                            <div class="skill-container">
+                              <div class="skill-percentage skill-9"></div>
+                            </div>
+  
+                            <h4>Figma</h4>
+                            <div class="skill-container">
+                              <div class="skill-percentage skill-7"></div>
+                            </div>
+                          </div>
+                        </div>
                     </div>
                   </div>
 
