--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       name="keywords"
       content="curriculo, lucas, rocha, git, github, developer"
     />
-    <link rel="shortcut icon" href="code.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
@@ -136,7 +136,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="about-me">
                         <div class="block-title">
-                          <h3>Quem <span>Sou?</span></h3>
+                          <h3>Who <span>Am I ?</span></h3>
                         </div>
                         <p>
                           Hey! I'm Lucas Rocha and it's a pleasure to have you here. I have a deep passion for software development and innovation, I hope you enjoy the content I have prepared especially for you!
@@ -409,7 +409,7 @@
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
-                        <h3>Sou <span>bom em...</span></h3>
+                        <h3>I'm <span>good at...</span></h3>
                       </div>
                     </div>
 
