--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
                         <a href="https://github.com/santoslucas11"
                           ><i class="fa fa-github"></i
                         ></a>
+                        <a href="https://g.dev/lucas_rocha27"
+                          ><i class="fa fa-android"></i
+                        ></a>
                       </div>
                     </div>
                   </div>
